src/components/tree_view/tree_view.scss
.euiTreeView__iconPlaceholder {
  width: $euiSizeXL;
}

.euiTreeView__iconWrapper {
  margin-top: -($euiSizeXS / 2);
  margin-right: $euiSizeS;

  // This helps tokens appear vertically centered
  .euiToken {
    margin-top: $euiSizeXS / 2;
  }
}

.euiTreeView--compressed {
  .euiTreeView__iconWrapper {
    margin: 0 ($euiSizeS * .75) 0 0;
  }

  .euiTreeView__iconPlaceholder {
    width: $euiSizeL;
  }
}

.euiTreeView--withArrows {
  .euiTreeView__expansionArrow {
    margin-right: $euiSizeXS;
  }

  &.euiTreeView {
    .euiTreeView__nodeInner--withArrows {
      .euiTreeView__iconWrapper {
        margin-left: 0;
      }
    }

    .euiTreeView__iconWrapper {
      margin-left: $euiSize + $euiSizeXS;
    }
  }

  &.euiTreeView--compressed {
    .euiTreeView__nodeInner--withArrows {
      .euiTreeView__iconWrapper {
        margin-left: 0;
      }
    }

    .euiTreeView__iconWrapper {
      margin-left: $euiSize;
    }
  }
}

